# CS1230-Final-Project

./: .gitignore  CMakeLists.txt  README.md  obj_loader.cpp  obj_loader.h
resources/scene/: christmas.xml  dragon_parallax.xml
resources/shaders/: parallax.frag  parallax.vert  particle.frag  particle.vert  phong.frag  phong.vert  shadow.frag  shadow.vert  texture.frag  texture.vert
src/: camera.cpp  camera.h  fullscreen.cpp  fullscreen.h  lighting.cpp  lighting.h  main.cpp  mainwindow.cpp  mainwindow.h  particle.cpp  particle.h  realtime.cpp  realtime.h  settings.h  texture.cpp  texture.h
src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/utils/: obj_loader.cpp  obj_loader.h  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h  transforms.cpp  transforms.h
